--- a/views/configuracion/saldo_inicial.html
+++ b/views/configuracion/saldo_inicial.html
@@ -94,18 +94,18 @@
                               <tr>
                                  <td>P001</td>
                                  <td>mm-dd-aaaa</td>
-                                 <td>Póliza de saldo inicial</td>
+                                 <td>Póliza por concepto "a"</td>
                                  <td>1.1.1.1</td>
-                                 <td>Saldo inicial de caja</td>
+                                 <td>Saldo de caja por concepto "x"</td>
                                  <td>100.0</td>
                                  <td>100.0</td>
                               </tr>
                               <tr>
                                  <td>P001</td>
                                  <td>mm-dd-aaaa</td>
-                                 <td>Póliza de saldo inicial</td>
+                                 <td>Póliza por concepto "a"</td>
                                  <td>1.2.1</td>
-                                 <td>Saldo inicial de la cuenta 1.2.1</td>
+                                 <td>Saldo de la cuenta 1.2.1 por concepto "y"</td>
                                  <td>10.0</td>
                                  <td>10.0</td>
                               </tr>
