--- a/views/layout.html
+++ b/views/layout.html
@@ -611,7 +611,7 @@ header,h1,h2,h3,h4{
 									<i class="fa fa-lg fa-fw fa-usd"></i>
 									Estado de resultados
 								</a>
-                                <a href="{{=URL('cc_empresa','balanza')}}">
+                                <a href="{{=URL('reportes','balanza')}}">
 									<i class="fa fa-filter"></i>
 									Balanza
 								</a>
