--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -144,12 +144,12 @@ $(document).ready(function(){
 
     .rojo {
         color: red;
-        _style='text-align:right'),
+        text-align:right;
     }
 
     .verde {
         color: green;
-        _style='text-align:right'),
+        text-align:right;
     }
 
 </style>
