Cambios antes del merge

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -145,11 +145,13 @@ $(document).ready(function(){
     .rojo {
         color: red;
         text-align:right;
+        padding-right: 50%;
     }
 
     .verde {
         color: green;
         text-align:right;
+        padding-right: 50%;
     }
 
 </style>
