--- a/views/default/empresa_wizard.html
+++ b/views/default/empresa_wizard.html
@@ -25,7 +25,8 @@
 						<article class="col-sm-12 col-md-12 col-lg-12">
 				
 							<!-- Widget ID (each widget will need unique ID)-->
-							<div class="jarviswidget" id="wid-id-2" data-widget-editbutton="false" data-widget-deletebutton="false">
+							<!-- se cambió el ID-->
+                            <div class="jarviswidget" id="wid-id-cif" data-widget-editbutton="false" data-widget-deletebutton="false">
 								<!-- widget options:
 								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
 				
