Cambios en las funciones que controlan el periodo

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -141,16 +141,17 @@ $(document).ready(function(){
         font-weight: bold;
     }
 
+    .derecha {
+        text-align:right;
+        margin-right: 10%;
+    }
+
     .rojo {
         color: red;
-        text-align:right;
-        padding-right: 50%;
     }
 
     .verde {
         color: green;
-        text-align:right;
-        padding-right: 50%;
     }
 
 </style>
